# amd-hackathon-bill-analyzer

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  app.py  index.html  pyproject.toml  requirements.txt
comfy/: edit_references.py  render_ltx_batch.py  render_ltx_smoke.py  render_references.py  run_scene_critic.py
docs/: CUSTOM_DOMAIN_SETUP.md  bip-post-1-DRAFT.md  bip-post-2-DRAFT.md  bip-post-2-FINAL.md  bip-post-3-DRAFT.md  bip-post-3-FINAL.md  build-in-public-posts.md  day1-runbook.md  day3-runbook.md  escape-valves.md  index.html
eval/: apc-benchmark-hr1.json  citation-validator-bbb-ch01-FULL.json  citation-validator-bbb-ch01-day4-canonical.json  citation-validator-smoke5-bbb-ch01.json  day1-proof.txt  day2-proof.txt  fiscal-bbb-ch01-day6-metric.json  fiscal-bbb-ch01-day6.json  hr1-ch01-full-agent-suite.json  hr1-ch01-xref-via-http-server.json  hr1-chunks-50k-v2.json  hr1-chunks-50k.json  hr1-summarizer-3090-fork-v2.json  hr1-summarizer-3090-fork.json  podcast-bbb-ch01-day6.json  prompt-relay-bbb-ch01-day6-v1-archive.json  prompt-relay-bbb-ch01-day6-v4.json  prompt-relay-bbb-ch01-day6.pre-v6-backup.json  report-bbb-ch01-day3.json  report-bbb-ch01-day6-canonical.json  report-bbb-ch01.json  report-hr1-ch01.json  scene-critic-bbb-ch01-day6-v2.json  scene-critic-bbb-ch01-day6.json  scene-durations-bbb-ch01-day6.json  smoke-summarizer-wiring-qwen30b.json  smoke-vision-scene02-vs-seed256.json  xref-bbb-ch01-day4-canonical-metric.json  xref-bbb-ch01-day4-canonical.json
infra/: Modelfile.spine-64k  Modelfile.spine-instruct-64k  Modelfile.vision  diag-spine.sh  (+7 more)
(+99 files in other folders)
